--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,10 +16,10 @@
   <table class="table">
     <thead class="thead-light">
       <tr>
-        <td>Project Name</td>
-        <td>Client Name</td>
-        <td>Technologies</td>
-        <td>Role</td>
+        <th>Project Name</th>
+        <th>Client Name</th>
+        <th>Technologies</th>
+        <th>Role</th>
         <% if(isManager) {%>
           <td>Status</td>
       <% } %>
